--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,11 @@ jobs:
       - name: Clone the code
         uses: actions/checkout@v3
 
-      - name: Set up JDK ${{matrix.java}}
-        uses: actions/setup-java@v2
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
         with:
-          java-version: ${{matrix.java}}
-          distribution: 'adopt'
-          cache: maven
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Set up Maven 3.8.4
         uses: stCarolas/setup-maven@v4.5
